--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -3,7 +3,7 @@ name: Microservices CI Pipeline
 on:
   push:
     branches:
-      - main
+      - main  # Trigger on every push to the main branch
 
 jobs:
   unit-tests:
@@ -20,11 +20,22 @@ jobs:
       - name: Install Newman (Postman CLI)
         run: npm install -g newman
 
-      - name: Run calc service tests
-        run: newman run tests/calc_ut.postman_collection.json
+      # For each microservice, build and test in isolation
+      - name: Build and Test Calc Service
+        run: |
+          docker build -t calc-test ./src/calc
+          docker run -d --name calc-test -p 5000:5000 calc-test
+          sleep 15  # Wait for service to be ready
+          newman run tests/calc_ut.postman_collection.json
+          docker stop calc-test
 
-      - name: Run string service tests
-        run: newman run tests/string_ut.postman_collection.json
+      - name: Build and Test String Service
+        run: |
+          docker build -t string-test ./src/string
+          docker run -d --name string-test -p 5001:5000 string-test
+          sleep 15
+          newman run tests/string_ut.postman_collection.json
+          docker stop string-test
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -35,23 +46,17 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker images
+      - name: Build the Entire Architecture
         run: docker-compose build
 
-      - name: Run Docker containers
+      - name: Start All Services
         run: docker-compose up -d
 
-      - name: Run integration tests
+      - name: Wait for services to be ready
+        run: sleep 15
+
+      - name: Run Integration Tests
         run: newman run tests/integration.postman_collection.json
 
-  performance-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Locust
-        run: pip install locust
-
-      - name: Run performance tests
-        run: locust -f tests/locustfile.py --headless -u 100 -r 10 --run-time 1m --host=http://localhost:8080
+      - name: Stop All Services
+        run: docker-compose down
