--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -3,7 +3,7 @@ name: Microservices CI Pipeline
 on:
   push:
     branches:
-      - main  # Trigger on every push to the main branch
+      - main
 
 jobs:
   unit-tests:
@@ -20,23 +20,21 @@ jobs:
       - name: Install Newman (Postman CLI)
         run: npm install -g newman
 
-      # For each microservice, build and test in isolation
-      - name: Build and Test Calc Service
+      - name: Build and Test Calc Service (Unit)
         run: |
-          docker build -t calc-test ./src/calc
+          docker build -t calc-test -f ./src/calc/Dockerfile_test ./src/calc
           docker run -d --name calc-test -p 5000:5000 calc-test
           sleep 15  # Wait for service to be ready
           newman run tests/calc_ut.postman_collection.json
           docker stop calc-test
-
       - name: Build and Test String Service
         run: |
-          docker build -t string-test ./src/string
+          docker build -t string-test -f ./src/string/Dockerfile_test ./src/string
           docker run -d --name string-test -p 5001:5000 string-test
           sleep 15
           newman run tests/string_ut.postman_collection.json
           docker stop string-test
-
+  
   integration-tests:
     runs-on: ubuntu-latest
     steps:
