--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -42,7 +42,7 @@ jobs:
         run: docker stop calc-test
 
       - name: Build String Microservice (Unit)
-        run: docker build -t string-test -f ./src/string/Dockerfile_test ./src/calc
+        run: docker build -t string-test -f ./src/string/Dockerfile_test ./src/string
 
       - name: Run String Microservice (Unit)
         run: docker run -d --name string-test -p 5000:5000 string-test
